--- a/css/style.css
+++ b/css/style.css
@@ -34,14 +34,15 @@ Black-Gray: rgba(0, 0, 0, 0.65);
 
 White: #fff;
 Black: #242424;
-Dark Blue: #395376;
-Dark Gray: #424242; (footer only)
+Dark Blue: #324967;
+Dark Gray: #2e2e2e; (footer only)
 Mid Gray: #949494;
 Light Gray: #e6e6e6;
 
-Green: #929C6C;
-Red: #CF795C;
-Brown: #76776f;
+Red: #cc6b4b;
+Brown: #757575;
+Green: #778056;
+Blue: #4c6f9e; (sections)
 
 (carousel/image caption only/#nav0)
 Light Blue: #0645AD;
@@ -163,7 +164,7 @@ footer{
 	text-align: center;
 	line-height: 1.875em;
 	color: #fff;
-	background: #424242;
+	background: #2e2e2e;
 	margin: .75em auto 0;
 	padding: .25em 1em 1em 1em;
 }
@@ -240,12 +241,12 @@ hr{
 }
 a,
 a:visited{
-	color: #395376;
+	color: #324967;
 }
 a:hover,
 a:focus{
 	color: #e6e6e6;
-	background-color: #395376;
+	background-color: #324967;
 	transition: 0.2s;
 }
 footer a,
@@ -286,7 +287,7 @@ footer a:focus{
 h1,
 h2,
 h3{
-	color: #395376;
+	color: #324967;
 }
 h1{
   font-family: 'jacksilverregular';
@@ -334,7 +335,7 @@ a img{
 }
 a:hover img,
 a:focus img{
-	border: 3px #395376 solid;
+	border: 3px #324967 solid;
 }
 .image-border{
 	border: 1px solid #858585;
@@ -471,7 +472,7 @@ nav#nav1{
 }
 nav#nav1 .current{
 	text-decoration: underline;
-	text-decoration-color: #395376;
+	text-decoration-color: #324967;
 	text-decoration-thickness: 3px;
 }
 nav#nav1 a:hover .current,
@@ -567,7 +568,7 @@ nav#nav1 li:not(:first-child):not(:last-child) a{
 }
 nav#nav1 li:not(:first-child):not(:last-child) a:hover,
 nav#nav1 li:not(:first-child):not(:last-child) a:focus{
-	background-color: #395376;
+	background-color: #324967;
 	transition: 0.2s;
 }
 nav#nav1 li a:hover,
@@ -602,7 +603,7 @@ nav#nav1 li button#fallback-button{
 }
 nav#nav1 li button:hover,
 nav#nav1 li button:focus-within{
-	background-color: #395376;
+	background-color: #324967;
 	transition: 0.2s;
 }
 nav#nav1 li button i{
@@ -671,7 +672,7 @@ nav#nav2 #overlay-menu a{
 nav#nav2 #overlay-menu li a:hover,
 nav#nav2 #overlay-menu li a:focus{
   color: #fff;
-	background-color: #395376;
+	background-color: #324967;
   transition: 0.2s;
 }
 nav#nav2 #overlay-menu ul{
@@ -726,7 +727,7 @@ nav#nav2 #overlay-menu li button.close{
 }
 nav#nav2 #overlay-menu li button.close:hover,
 nav#nav2 #overlay-menu li button.close:focus-within{
-	background-color: #395376;
+	background-color: #324967;
 	transition: 0.2s;
 }
 nav#nav2 #overlay-menu li button.close i{
@@ -766,7 +767,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 .skipcontrols a{
 	font-size: .8em;
 	font-family: Arial, Geneva, Tahoma, sans-serif;
-	color: #395376;
+	color: #324967;
 	background: #e6e6e6;
 	border-bottom-right-radius: 8px;
 	-webkit-border-bottom-right-radius: 8px;
@@ -805,7 +806,7 @@ nav#nav2 #overlay-menu li button.close:focus i{
 	cursor: pointer;
 	font-size: .95em;
 	color: #fff;
-	background-color: #395376;
+	background-color: #324967;
 	border: 2px solid #fff;
 	border-radius: 4px;
 	-webkit-border-radius: 4px;
@@ -838,13 +839,13 @@ nav#nav2 #overlay-menu li button.close:focus i{
   #topButton:hover,
   #topButton:focus{
 	font-weight: 600;
-	color: #395376;
+	color: #324967;
 	background-color: #fff;
-	border: 2px solid #395376;
+	border: 2px solid #324967;
 }
 #topButton:active{
 	color: #fff;
-	background-color: #395376;
+	background-color: #324967;
 	border: 2px solid transparent;
 }
 
