--- a/css/content.css
+++ b/css/content.css
@@ -6,13 +6,19 @@
 */
 /* ----------------------- */
 .zoomcasts.content header{
-	background: #CF795C;
+	background: #ca6a4a;
 }
 .zoomcasts.content .youtube .play-button{
-	background-color: #CF795C;
+	background-color: #cc6b4b;
 }
 .lesson-plans.content header{
-	background: #76776f;
+	background: #4c6f9e;
+}
+.syllabi.content header{
+	background: #728a61;
+}
+.about.content header{
+	background: #757575;
 }
 /* ----------------------- */
 .content header{
