--- a/css/style.css
+++ b/css/style.css
@@ -42,7 +42,7 @@ Light Gray: #e6e6e6;
 Red: #cc6b4b;
 Brown: #757575;
 Green: #778056;
-Blue: #4c6f9e; (sections)
+Blue: #4a6b99; (sections)
 
 (carousel/image caption only/#nav0)
 Light Blue: #0645AD;
