--- a/css/cluster.css
+++ b/css/cluster.css
@@ -13,11 +13,11 @@
 	background: #cc6b4b;
 }
 .lesson-plans.cluster main section:first-child{
-	background: linear-gradient(to left top, #fff 50%, #4c6f9e 50%);
+	background: linear-gradient(to left top, #fff 50%, #4a6b99 50%);
 }
 .lesson-plans.cluster main section h2{
 	color: white;
-	background: #4c6f9e;
+	background: #4a6b99;
 }
 .syllabi.cluster main section:first-child{
 	background: linear-gradient(to left top, #fff 50%, #728a61 50%);
@@ -186,7 +186,31 @@
 	background: none;
 }
 .cluster main section ol{
-	display: inline-block;
+	text-align: center;
+	list-style: none;
 	margin: 0 auto 1em;
 	padding: 0;
+	display: block;
+}
+.cluster main section ol li{
+	/* background: #949494; */
+	border: 1px solid #949494;
+	border-radius: 5px;
+	margin: 1em 2.5em;
+	padding: 1px 4px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+.cluster main section ol li a,
+.cluster main section ol li a:visited{
+	/* color: white; */
+	color: #242424;
+	text-decoration: none;
+	/* font-weight: 600; */
+}
+.cluster main section ol li:hover,
+.cluster main section ol li:focus-within,
+.cluster main section ol li:hover a,
+.cluster main section ol li:focus a{
+	color: white;
+	background: #324967;
 }
