content for blue

--- a/css/content.css
+++ b/css/content.css
@@ -12,7 +12,7 @@
 	background-color: #cc6b4b;
 }
 .lesson-plans.content header{
-	background: #4c6f9e;
+	background: #4a6b99;
 }
 .syllabi.content header{
 	background: #728a61;
