--- a/css/content.css
+++ b/css/content.css
@@ -5,6 +5,7 @@
 
 */
 /* ----------------------- */
+/* Also see cluster.css and .current on style.css */
 .zoomcasts.content header{
 	background: #ca6a4a;
 }
