--- a/css/cluster.css
+++ b/css/cluster.css
@@ -121,6 +121,7 @@
 	transform: translate(-50%, -50%);
 }
 .cluster main section p{
+	font-size: .95em;
 	padding: 0 1em;
 }
 .cluster main section div{
