--- a/css/cluster.css
+++ b/css/cluster.css
@@ -1,9 +1,5 @@
 /* 1.2.1 Cluster Pages */
 
-/* Section-specific colors */
-/* 
-
-*/
 /* ----------------------- */
 /* Also see content.css and .current on style.css */
 .zoomcasts.cluster main section:first-child{
@@ -71,6 +67,8 @@
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	margin: 1em auto;
+	display: flex;
+	flex-flow: column;
 }
 .cluster main section:first-child{
 	min-height: 150px;
@@ -105,7 +103,7 @@
 	border-radius: 4px 4px 0 0;
 	-webkit-border-radius: 4px 4px 0 0;
 	-moz-border-radius: 4px 4px 0 0;
-	margin-top: 0;
+	margin: 0;
 	padding: .5em 0;
 }
 .cluster main section h2#level-2-title{
@@ -113,8 +111,11 @@
 	white-space: nowrap;
 	border: 3px solid #fff;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	margin: 0;
 	padding: 10px;
+	height: 33px;
 	position: absolute;
 	top: 50%;
 	left: 50%;
@@ -127,7 +128,7 @@
 .cluster main section div{
 	line-height: 0;
 	background: #e6e6e6;
-	margin: .5em;
+	margin: 1em;
 	padding: 0;
 	overflow: hidden;
 	position: relative;
@@ -139,9 +140,9 @@
 .cluster main section div img{
 	background: #e6e6e6;
 	max-width: 100%;
-	min-height: 150px;
+	/* min-height: 150px; */
 }
-@media only screen and (min-width: 480px){
+/* @media only screen and (min-width: 480px){
 	.cluster main section div img{
 		min-height: 230px;
 	}
@@ -160,7 +161,7 @@
 	.cluster main section div img{
 		min-height: 263px;
 	}
-}
+} */
 .cluster main section div a img{
 	border: none;
 }
@@ -189,70 +190,34 @@
 }
 .cluster main section ol,
 .cluster main section ul{
+	text-align: center;
+	list-style: none;
 	margin: 1em 1em 1.5em;
 	padding: 0;
-	/* display: inline-block; */
-	list-style: none;
-	text-align: center;
-	/* margin: 1em 1em 2em; */
-	/* list-style: none;
-	text-align: center;
-	display: grid;
-  overflow: hidden;
-  grid-template-columns: repeat(2, 1fr);
-  grid-auto-rows: 1fr;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px; */
-}
-@media only screen and (min-width: 480px){
-	.cluster main section ol,
-	.cluster main section ul{
-		/* margin: 1em 0; */
-	}
 }
 @media only screen and (min-width: 768px){
 	.cluster main section ol,
 	.cluster main section ul{
-		/* margin: 0 1em; */
 		display: flex;
 		flex-wrap: wrap;
 	}
 }
-/* .cluster main section ul li{
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	border: 1px solid black;
-	background-color: #e6e6e6;
-	padding: 0 .5em;
-}
-.cluster main section ul li a,
-.cluster main section ul li a:visited{
-	color: #242424;
-	text-decoration: none;
-	font-weight: 600;
-	hyphens: none;
-} */
 .cluster main section ul li{
 	hyphens: none;
 	line-height: 1.5em;
 	border: 1px solid #e6e6e6;
 	border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-moz-border-radius: 5px;
 	margin: 1em 0;
-	padding: .5em;
-	/* margin: 1.25em 0;
-	padding: 3px 4px; */
+	padding: .3em;
 	box-shadow: rgba(50, 50, 93, 0.25) 0px 6px 12px -2px, rgba(0, 0, 0, 0.3) 0px 3px 7px -3px;
-}
-@media only screen and (min-width: 480px){
-		.cluster main section ul li{
-			/* margin: 1.5em 1em;
-			padding: .35em; */
-		}
 }
 @media only screen and (min-width: 768px){
 	.cluster main section ul li{
 		margin: .5em;
+		padding: .15em;
+		min-height: 35px;
 		flex: 1 0 calc(50% - 2px - 2em);
 		display: flex;
 		align-items: center;
@@ -263,14 +228,20 @@
 	font-size: .95em;
 	font-family: 'Noto Serif', serif;
 	font-weight: 600;
-	border-radius: 0;
-	padding: 0;
+	background: #e6e6e6;
+	min-height: unset;
 }
 @media only screen and (min-width: 768px){
 	.cluster main section ul li:first-child{
+		margin: .5em .5em .75em;
 		display: block;
 		flex: 1 0 calc(100% - 2px - 1em);
 	}
+}
+.cluster main section ul li:first-child:hover,
+.cluster main section ul li:first-child:focus-within{
+	color: inherit;
+	background: #e6e6e6;
 }
 .cluster main section ul li a,
 .cluster main section ul li a:visited{
@@ -281,11 +252,16 @@
 .cluster main section ul li:hover,
 .cluster main section ul li:focus-within,
 .cluster main section ul li:hover a,
-.cluster main section ul li:focus a{
+.cluster main section ul li:focus-within a{
 	color: white;
 	background: #324967;
 }
 .cluster main section ul li a i{
 	display: none;
 	visibility: hidden;
+}
+.lesson-plans.cluster main section div{
+	height: 100%;
+	display: flex;
+  flex-flow: column;
 }
