--- a/css/content.css
+++ b/css/content.css
@@ -13,7 +13,7 @@
 	background-color: #cc6b4b;
 }
 .lesson-plans.content header{
-	background: #4a6b99;
+	background: #5378ac;
 }
 .syllabi.content header{
 	background: #728a61;
