--- a/css/carousel.css
+++ b/css/carousel.css
@@ -128,11 +128,11 @@
 }
 .carousel .carousel-item .carousel-caption a:hover,
 .carousel .carousel-item .carousel-caption a:focus{
-	background-color: #4a6b99;
+	background-color: #5378ac;
 	margin: 0;
 }
 .carousel .carousel-item .carousel-caption a:focus{
-	border-color: #4a6b99;
+	border-color: #5378ac;
 	box-shadow: inset 0px 0px 0px 2px #fff;
 	-webkit-box-shadow: inset 0px 0px 0px 2px #fff;
     -moz-box-shadow: inset 0px 0px 0px 2px #fff;
@@ -162,8 +162,8 @@
 .carousel .controls button:hover rect.background,
 .carousel .controls button:focus rect.border,
 .carousel .controls button:hover rect.border{
-	fill: #4a6b99; ;
-	stroke: #4a6b99;
+	fill: #5378ac; ;
+	stroke: #5378ac;
 	opacity: 1;
 }
 /* Next and Previous Slide Controls */
@@ -206,8 +206,8 @@
 .carousel .controls button:hover rect.background,
 .carousel .controls button:focus rect.border,
 .carousel .controls button:hover rect.border{
-	fill: #4a6b99; ;
-	stroke: #4a6b99; 
+	fill: #5378ac; ;
+	stroke: #5378ac; 
 	opacity: 1;
 } */
 .carousel .controls button:focus rect.border{
