--- a/css/content.css
+++ b/css/content.css
@@ -53,6 +53,7 @@
 	padding: .5em 1em 1em;
 }
 .lesson-plans.content main{
+	text-align: center;
 	margin: 0 auto;
 	max-width: 700px;
 	}
@@ -113,10 +114,19 @@
 }
 .content main section.menu-container{
 	text-align: center;
+	border: 1px solid #949494;
+	margin: 0;
+	padding: 1em 2em 1.5em;
+	display: inline-block;
+}
+.content main section.menu-container h3{
+	color: #242424;
+	margin-top: 0;
 }
 .content ol.menu{
-	font-size: .95em;
+	font-size: .9em;
 	margin: 0 auto;
+	padding-left: 1.2em;
 	display: inline-block;
 }
 .content ol.menu li ol{
