--- a/css/youtube.css
+++ b/css/youtube.css
@@ -88,6 +88,8 @@
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
+	-moz-transform: translate(-50%, -50%);
+	-webkit-transform: translate(-50%, -50%);
 }
 .youtube iframe{
 	height: 100%;
