--- a/css/content.css
+++ b/css/content.css
@@ -53,13 +53,15 @@
 	text-align: left;
 	padding: .5em 1em 1em;
 }
-.lesson-plans.content main{
+.lesson-plans.content main
+.about.content main{
 	text-align: center;
 	margin: 0 auto;
 	max-width: 700px;
 	}
 @media only screen and (min-width: 992px){
-	.lesson-plans.content main{
+	.lesson-plans.content main,
+	.about.content main{
 		width: 75% !important;
 		max-width: 900px;
 	}
@@ -75,7 +77,7 @@
 	.content main summary,
 	.content main section,
 	.content main aside{
-		margin: 2.5em auto;
+		margin: 3em auto;
 	}
 }
 .content main aside{
@@ -156,6 +158,11 @@
 }
 .content section ul li{
 	margin-bottom: .5em;
+}
+.about.content section ul{
+	list-style: none;
+	margin: 1.5em;
+	padding: 0;
 }
 .content h3#user-guide{
 	color: #242424;
