--- a/css/style.css
+++ b/css/style.css
@@ -134,19 +134,37 @@ main{
 		padding: 1.25em 1em 1em;
 	}
 }
+main summary,
+main section,
+main aside{
+	margin: 2em auto;
+}
+@media only screen and (min-width: 768px){
+	main summary,
+	main section,
+	main aside{
+		margin: 3em auto;
+	}
+}
+main section:last-of-type {
+	margin-bottom: 0;
+}
 main section p,
 main section ol,
 main section ul{
 	text-align: left;
 }
 .organizers{
-	margin-bottom: .5em;
+	margin: .5em 0;
 	display: inline-block;
 }
 @media only screen and (min-width: 992px){
 	.organizers{
 		margin-bottom: 1.25em;
 	}
+}
+.organizers + section{
+	margin-top: .5em;
 }
 ol.mission{
 	margin: 0 1em;
@@ -300,7 +318,8 @@ footer a:focus{
 }
 h1,
 h2,
-h3{
+h3,
+h4{
 	color: #395375;
 }
 h1{
@@ -308,7 +327,7 @@ h1{
 	line-height: 1em;
 	margin: 0;
 }
-h2, h3{
+h2, h3, h4, h5{
 	font-family: 'Noto Serif', serif;
 	font-weight: 700;
 }
@@ -316,20 +335,31 @@ h2, h3, h4{
 	text-align: center;
 }
 h2{
-	font-size: 1.2em;
+	font-size: 1.15em;
 }
 h3{
 	font-size: 1.1em;
 }
+.details h3{
+	font-variant: small-caps;
+	color: inherit;
+}
 h4{
-	font-size: 1em;
+	font-size: 1.05em;
 	font-weight: 600;
+	font-variant: small-caps;
 }
 .details h4{
     margin-top: 2.5em;
 }
 .details h4:first-of-type{
     margin-top: 1em;
+}
+h5{
+	font-size: .95em;
+	font-style: italic;
+	font-weight: normal;
+	text-align: left;
 }
 /*logo*/
 @font-face {
