--- a/css/content.css
+++ b/css/content.css
@@ -52,16 +52,23 @@
 .content main{
 	padding: .5em 1em 1em;
 }
-.lesson-plans.content main
-.about.content main{
+.content.lesson-plans main
+.content.about main{
 	text-align: center;
 	margin: 0 auto;
 	max-width: 700px;
-	}
+}
+.content.about.biographies main section{
+	max-width: 700px;
+}
 @media only screen and (min-width: 992px){
-	.lesson-plans.content main,
-	.about.content main{
-		width: 75% !important;
+	.content.lesson-plans main,
+	.content.about main{
+		width: 75%;
+		max-width: 900px;
+	}
+	.content.about.biographies main{
+		width: 100%;
 		max-width: 900px;
 	}
 }
@@ -84,16 +91,6 @@
 }
 .content main section section{
 	counter-reset: none;
-}
-.content main section#biographies{
-	margin: 0 auto;
-	max-width: 700px;
-}
-@media only screen and (min-width: 992px){
-	.content main section#biographies{
-		width: 85%;
-		max-width: 900px;
-	}	
 }
 .content main h2{
 	font-size: 1.9em;
@@ -169,13 +166,13 @@
 .content section p{
 	clear: both;
 }
-.content section p img{
+.content.about.biographies section p img{
 	margin: .5em .75em 0 0;
 	width: 100%;
 	display: inline-block;
 }
 @media only screen and (min-width: 480px){
-	.content section p img{
+	.content.about.biographies section p img{
 		margin: .5em .75em 0 0;
 		width: 50%;
 		float: left;
@@ -183,12 +180,12 @@
 	}	
 }
 @media only screen and (min-width: 768px){
-	.content section p img{
+	.content.about.biographies section p img{
 		width: 30%;
 	}
 }
 @media only screen and (min-width: 992px){
-	.content section p img{
+	.content.about.biographies section p img{
 		width: 25%;
 	}
 }
