update content for orange

--- a/css/content.css
+++ b/css/content.css
@@ -7,10 +7,10 @@
 /* ----------------------- */
 /* Also see cluster.css and .current on style.css */
 .zoomcasts.content header{
-	background: #ca6a4a;
+	background: #cb6948;
 }
 .zoomcasts.content .youtube .play-button{
-	background-color: #cc6b4b;
+	background-color: #cb6948;
 }
 .lesson-plans.content header,
 .content main section.menu-container h3{
