--- a/css/content.css
+++ b/css/content.css
@@ -83,6 +83,37 @@
 	text-align: left;
 	max-width: 650px;
 }
+/* Adapted from https://pqina.nl/blog/presenting-images-in-an-aspect-ratio-with-css/ */
+/* 
+9 / 16 = 56.25 
+8 / 10 = 80
+5 / 7 = 71.43
+2 / 3 = 66.67 
+*/
+.content main .aspect-ratio-box{
+	margin: 1.25em auto;
+	max-width: 800px;
+	position: relative;
+}
+.content main .aspect-ratio-box::after {
+  content: "";
+  padding-bottom: 66.67%;
+	display: block;
+}
+.content main .aspect-ratio-box img {
+	/* border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px; */
+	width: 100%;
+  height: 100%;
+	position: absolute;
+  left: 0;
+  top: 0;
+	object-fit:cover;
+	-o-object-fit: cover;
+	overflow: hidden;
+	object-position: 50% 50%;
+}
 .content main aside{
 	box-sizing: border-box;
 }
@@ -98,10 +129,25 @@
 	counter-reset: none;
 }
 .content main h2{
-	font-size: 1.9em;
+	font-size: 2.2em;
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 600;
 	hyphens: none;
-	color: #242424;
 	line-height: 1.5em;
+	color: #fff;
+	background-color: rgb(66,66,66);
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+	margin: 0;
+	padding: .25em .75em;
+	width: fit-content;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	opacity: .85;
+	z-index: 15;
 }
 .content main h3{
 	font-size: 1.15em;
