update style for z-index notes

--- a/css/style.css
+++ b/css/style.css
@@ -55,6 +55,7 @@ Sky Blue: #89B8D3; (not used)
 /** z-index **/
 /*
 .carousel .controls button = 10
+.content main h2 = 15
 nav#nav1 = 20
 #regular-button = 21
 #fallback-button = 22
